# AL_laba_4_1st_semestre

./: .gitignore  CMakeLists.txt  README.md  lab05.hpp  main.cpp  task_01.cpp  task_02.cpp  task_03.cpp  task_04.cpp  task_05.cpp  task_06.cpp  task_07.cpp  task_08.cpp
