cmake_minimum_required(VERSION 3.10)

project(Laba_004)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_COMPILER /usr/bin/clang++)

add_executable(laba004 
main.cpp 
task_01.cpp
task_02.cpp
task_03.cpp
task_04.cpp
task_05.cpp
task_06.cpp
task_07.cpp
task_08.cpp
lab05.hpp)